refactor file tools, add delete
