# server/tools/project/openapi.yaml
@@ -3,6 +3,77 @@ info:
   title: Project Tool
   version: "v1"
 paths:
+  /project/file/read:
+    post:
+      operationId: fileRead
+      summary: Read a project file
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                path:
+                  required: true
+                  type: string
+                  description: Relative path to the file from the root of the project.
+                  example: server/tools/file/openapi.yaml
+  /project/file/write:
+    post:
+      operationId: fileWrite
+      summary: Write a project file
+      description: |
+        This endpoint allows you to perform a Google search by providing a search query in the request body.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                path:
+                  required: true
+                  type: string
+                  description: Relative path to the file from the root of the project.
+                  example: server/tools/file/openapi.yaml
+                contents:
+                  required: true
+                  type: string
+                  description: The contents of the file.
+  /project/file/delete:
+    delete:
+      operationId: fileDelete
+      summary: Delete a project file
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                path:
+                  required: true
+                  type: string
+                  description: Relative path to the file from the root of the project.
+                  example: server/tools/file/file-to-delete.ts
+  /project/file/find:
+    post:
+      operationId: fileFind
+      summary: Find a file
+      description: Matches any part of the file name. Case insensitive. Returns all matching results.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                query:
+                  required: true
+                  type: string
+                  description: The search query.
+                  example: openapi
   /project/exec:
     post:
       operationId: runShellCommand
